--- a/chiranjeevi.html
+++ b/chiranjeevi.html
@@ -298,7 +298,7 @@ document.addEventListener('click', function(event) {
         
         Following the huge success of Shankar Dada MBBS, the actor starred in a dual role alongside Rimi Sen, Tabu, Pradeep Rawat and Prakash Raj in the Srinu Vytla directed comedy-drama film Andarivaadu, which released in June 2005. Over the next few years, the actor appeared in films like Style (2006), Shankar Dada Zindabad (2007) and Magadheera (2009) where he did a cameo. Post-2009, the actor took a sabbatical before eventually making his comeback in 2015 with Bruce Lee - The Fighter where he appeared in a guest role. His 2017 release includes Khaidi No. 150 directed by V.V. Vinayak. The film, which marks his 150th appearance on the big screen also features Shriya Saran and Kajal Aggarwal in the lead roles. His 2019 release includes Syeraa Narasimha Reddy.</p>
     <h2 style="color: #333;">Peers & More</h2>    
-    <img src="D:\getmyshow\getphotos\rajinikanth.jpg", alt="Rajinikanth", height="225", width="220">
+    <img src="getphotos\rajinikanth.jpg", alt="Rajinikanth", height="225", width="220">
     <img src="D:\getmyshow\getphotos\ramyakrishnan.jpg", alt="Ramya Krishnan", height="225", width="220">
     <a href="Nandamuri%20Balakrishna.html"><img src="getphotos\balakrishna.jpg", alt="Bala Krishna", height="225", width="220"></a>
     <img src="D:\getmyshow\getphotos\gautami.jpg", alt="Gautami Tadimalla", height="225", width="220">
